--- a/Fahad Dev Org/src/classes/Invoice_Payment.cls
+++ b/Fahad Dev Org/src/classes/Invoice_Payment.cls
@@ -133,5 +133,9 @@ public class Invoice_Payment{
         
         update InvoiceToUpdate;
         */
+        
+        Integer i= 0;
+        i= 0; 
+        i = 0;
     }
 }
